Adjust demo-image width to prevent overflow as seen on physical device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -980,6 +980,6 @@ footer {
             }
 
             .demo-images {
-                width: 260px;
+                width: 250px;
             }
 }
